<resources>
    <string name="app_name">MADEFallApp</string>
    <string name="uni_name">University of central punjab</string>
    <string name="cs_text">CS</string>
    <string name="se_text">SE</string>
    <string name="it_text">IT</string>
    <string name="change_text_btn">Change Text</string>
    <string name="enter_your_first_value_here_et">Enter your first value here</string>
    <string name="enter_your_second_value_here_et">Enter your second value here\n</string>
    <string name="add_value_btn">+</string>
    <string name="sub_value_btn">-</string>
    <string name="mul_value_btn">*</string>
    <string name="divide_value_btn">/</string>
    <string name="clear_fields_btn">Clear Fields</string>
    <string name="add_single_record">Add Single Record</string>
    <string name="get_record">Get Records</string>
    <string name="enter_the_name_here">Enter the name here</string>
    <string name="enter_the_email_here">Enter the email here\n</string>
    <string name="enter_the_age_here">Enter the age here</string>
    <string name="save_the_record">Save the record</string>
    <string name="get_the_record">Get the record</string>
    <string name="result_will_be_displayed_here">Result will be displayed here</string>
    <string name="start_media">Start Media</string>
    <string name="stop_media">Stop Media</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>