<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Lecture081123.Lecture081123Activity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/first_value_et"
        android:hint="@string/enter_your_first_value_here_et"
        android:inputType="number"
        android:maxLength="5"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/second_value_et"
        android:hint="@string/enter_your_second_value_here_et"
        android:inputType="number"
        android:maxLength="5"
        android:layout_below="@id/first_value_et"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inner_ll"
        android:orientation="horizontal"
        android:layout_below="@id/second_value_et"
        android:padding="10dp"
        >

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/add_value_btn"
            android:text="@string/add_value_btn"
            android:padding="2dp"
            android:layout_marginEnd="5dp"
            />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/sub_value_btn"
            android:text="@string/sub_value_btn"
            android:padding="2dp"
            android:layout_marginEnd="5dp"
            />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/mul_value_btn"
            android:text="@string/mul_value_btn"
            android:padding="2dp"
            android:layout_marginEnd="5dp"
            />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/divide_value_btn"
            android:text="@string/divide_value_btn"
            android:padding="2dp"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/result_tv"
        android:text="Result:"
        android:layout_below="@id/inner_ll"
        android:padding="10dp"
        android:textSize="15sp"
        android:gravity="center"
        />

    <Button
        android:id="@+id/refresh_content_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_tv"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        android:text="@string/clear_fields_btn" />

</RelativeLayout>





